--- a/email/mjml/register.mjml
+++ b/email/mjml/register.mjml
@@ -21,7 +21,7 @@
           color="#4b5563"
           align="left"
         >
-          Hotspot Vaccine Notifications
+          Vaccine Notifications
         </mj-text>
         <mj-text
           font-size="16px"
@@ -31,8 +31,8 @@
           line-height="20px"
         >
           We will notify you by email when you become eligible for a vaccine at
-          a hotspot vaccination site based on the information you provided when
-          you signed up.
+          a popup or hotspot vaccination site based on the information you
+          provided when you signed up.
         </mj-text>
         <mj-text
           font-size="16px"
