emails updated to generic

--- a/email/mjml/register.mjml
+++ b/email/mjml/register.mjml
@@ -31,7 +31,7 @@
           line-height="20px"
         >
           We will notify you by email when you become eligible for a vaccine at
-          a popup or hotspot vaccination site based on the information you
+          a pop-up or hot spot vaccination site based on the information you
           provided when you signed up.
         </mj-text>
         <mj-text
