--- a/email/mjml/notify.mjml
+++ b/email/mjml/notify.mjml
@@ -100,12 +100,32 @@
           font-size="16px"
           font-family="sans-serif"
           color="#4b5563"
-          align="left"
+          align="center"
+          line-height="20px"
+        >
+          Let us know how we are doing:
+          <a
+            style="color: #f15d4a; text-decoration: none"
+            href="https://twitter.com/FindaVaccine"
+            target="_blank"
+          >
+            @FindaVaccine
+          </a>
+        </mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section>
+      <mj-column>
+        <mj-text
+          font-size="14px"
+          font-family="sans-serif"
+          color="#9ca3af"
+          align="center"
           line-height="20px"
         >
           If you believe you received this email in error, please contact us at:
           <a
-            style="color: #f15d4a; text-decoration: none"
+            style="color: #fab550; text-decoration: none"
             href="mailto:contact@findavaccine.ca"
             target="_blank"
           >
