--- a/email/mjml/unsubscribe.mjml
+++ b/email/mjml/unsubscribe.mjml
@@ -34,23 +34,26 @@
           no longer email when you become eligible for a vaccine at a pop-up or
           hot spot vaccination site.
         </mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section>
+      <mj-column>
         <mj-text
-          font-size="16px"
+          font-size="14px"
           font-family="sans-serif"
-          color="#4b5563"
-          align="left"
+          color="#9ca3af"
+          align="center"
           line-height="20px"
         >
           If you believe you received this email in error, please contact us at:
           <a
-            style="color: #f15d4a; text-decoration: none"
+            style="color: #fab550; text-decoration: none"
             href="mailto:contact@findavaccine.ca"
             target="_blank"
           >
             contact@findavaccine.ca
           </a>
         </mj-text>
-        <mj-spacer height="30px" />
       </mj-column>
     </mj-section>
   </mj-body>
